<resources>
    <string name="app_name" translatable="false">MFitX</string>
    <string name="bt_unavailable">Bluetooth unavailable</string>
    <string name="action_scan">Scan</string>
    <string name="action_stop">Stop</string>
    <string name="confirm_str" translatable="false">OK</string>
    <string name="NotSyncedYet" translatable="false">—</string>
    <string name="title_activity_settings">Settings</string>
    <string name="receive_notifications">Receive Notifications?</string>
    <string name="BluetoothRequiredMsg">Enabled bluetooth is required</string>
    <string name="BluetoothIsNotSupported">Your device have not bluetooth service</string>
    <string name="title_activity_alarm">Alarms</string>
    <string name="sunday">Sunday</string>
    <string name="friday">Friday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="saturday">Saturday</string>
    <string name="monday">Monday</string>
    <string name="minimal_possible_wake_up_time">Minimal possible wake up time</string>
    <string name="hh" translatable="false">HH</string>
    <string name="enabled">Enabled?</string>
    <string name="sync">Sync?</string>
    <string name="mm" translatable="false">MM</string>
    <string name="delete">Delete</string>
    <string name="filters">Filters</string>
    <string name="receive_phone_call">Receive Calls?</string>
    <string name="enable_auto_illumination">Wrist autolight</string>
    <string name="restore_to_defaults_str">Restore to defaults</string>
    <string name="erase_data_on_band_str">Erase data on band</string>
    <string name="sync_heart_rate_in_real_time">Sync Heart Rate In Real Time</string>
    <string name="status_label">Status: Establishing</string>
    <string name="calories_burned">Calories burned</string>
    <string name="alarm_window_show">Alarm Window Show</string>
    <string name="force_sync_btn">Force Sync Btn</string>
    <string name="exit_and_close_btn">Exit And Close Btn</string>
    <string name="steps_completed_icon">Steps Completed Icon</string>
    <string name="battery_charge_icon">Battery charge icon</string>
    <string name="pulse_icon">Pulse icon</string>
    <string name="settings_btn">Settings Btn</string>
    <string name="bluetooth_disabled_or_not_supported">Status : Bluetooth do not supported or disabled.</string>
    <string name="disconnect_btn_text">Disconnect</string>
    <string name="current_device_default_text">Current Device: …</string>
    <string name="step_size_centimeters">Step size (meters)</string>
    <string name="connection_not_established">Connection not established</string>
    <string name="title_activity_report_activity">Stats Activity</string>
    <string name="overall_stats">Overall Stats</string>
    <string name="today_report">Today Stats</string>
    <string name="passed">Passed&#160;</string>
    <string name="kilos_with">&#160;kilometers with&#160;</string>
    <string name="steps">&#160;steps</string>
    <string name="burned_calories">Burned calories&#160;</string>
    <string name="based_on">Based on&#160;</string>
    <string name="activity_records">&#160;activity records</string>
    <string name="and">&#160;and&#160;</string>
    <string name="HR_records">&#160;HR records</string>
    <string name="pathological_tachycardia">Pathological tachycardia</string>
    <string name="confident_bradycardia">Confident bradycardia</string>
    <string name="min_HR">Min HR:&#160;</string>
    <string name="avg_HR">&#160;Average HR:&#160;</string>
    <string name="max_HR">&#160;Max HR:&#160;</string>
    <string name="anomalies">Anomalies:&#160;</string>
    <string name="step_size_n_centimeters">Step size\n(meters)</string>
    <string name="no_activity_data">No activity data</string>
    <string name="no_hearth_rate_data">No Hearth Rate data</string>
    <string name="status_engaging">Status : Bluetooth enabled. Engaging...</string>
    <string name="offline_mode">Status: Bluetooth enable request is rejected. Offline mode</string>
    <string name="discovering">Status : Trying to discover...</string>
    <string name="info_about_app_and_other">Info about app and other</string>
    <string name="sleep_data_button">Sleep Data Button</string>
    <string name="DateTime">Date/Time</string>
    <string name="report_activity_button">Report Activity Button</string>
    <string name="info_text">MGCOOL EX App v1.0\nSupported devices: MGCOOL Band 4\nLM715 (M4 Tracker)\nCreated by DrAnaconda Labs</string>
    <string name="developer_mail" translatable="false"><u>anonymouls777@gmail.com</u></string>
    <string name="ok" translatable="false">OK</string>
    <string name="connected_syncing">Status : Connected. Syncing...</string>
    <string name="device_controls">Device controls</string>
    <string name="times_every">times every</string>
    <string name="repeat_notification">Repeat notification X times</string>
    <string name="smart_notification_settings">Smart notification settings</string>
    <string name="seconds">seconds</string>
    <string name="default_banner_id" translatable="false">ca-app-pub-3631159279486321/2484046271</string>
    <string name="manual_sync_status">Manual sync...</string>
    <string name="downloading_data_status">Downloading data...</string>
    <string name="conntecting_status">Status : Connecting...</string>
    <string name="next_sync_status">Status : Connected. Next sync will be @&#160;</string>
    <string name="wait_untill_complete">Wait until all operations will complete</string>
    <string name="sleep_not_ready">This function is not realized yet.\nYour sleep history is being downloaded, but will not be displayed\nWe are investigating correctness of this data.
        \nSleep data are suspicious: In original app deep sleep always less than 20 mins.
        It is wrong. Only "fast phase" may be with this duration. Also hearth rate and sleep phases does have weak correlation.\n
        Also device starts recording sleep stats after setting up "sleep start" param, it is wrong, device should do it automatically.\n\nSleeping data is critical for hearth rate anomalies detection, so we are working about it. We will inform you about status
        of developing this function here.\nCurrent status: Analyzing correlation. Differential analysis heath rate and sleep stats.
        Progress: Data seems some useless, but there is some part information, that can be used.\n
        UDP: Data is being proceeding by some algos. Developing data visualisation modules\n
        \n\n
        Keep calm and wait for updates.
    </string>
    <string name="battery_health_not_ready">Battery Health Analyzer is not ready yet</string>
    <string name="about_application_page"><a href="https://gist.github.com/anonymouls/c75da35e3d9e26134692213af86ff5e4">About Application Page</a></string>
    <string name="privacy_policy"><a href="https://gist.github.com/anonymouls/82b8749e96e69370963f8ba61152068e">Privacy Policy</a></string>
    <string name="contacts_perm_req">Granting this permission will display contact name when he will ring</string>
    <string name="phonestate_perm_req">Granting this permission will allow catch incoming calls and translate they to device</string>
    <string name="location_perm_req">Grant this permission for finding devices. After pairing with device you could disable it. This permission is necessary</string>
    <string name="skip_btn">Skip</string>
    <string name="apps_settings">Apps Settings</string>
    <string name="send_anonymous_stats_and_data_usage">Send anonymous stats and data usage</string>
    <string name="storage_perm_request"><![CDATA[Grant permission for saving your data on <external storage>/Android/data/dev.anonymouls.MGCEX/MGCEX.db, otherwise it will be saved in protected area]]></string>
    <string name="last_week_stats">Last Week Stats (</string>
    <string name="last_month_stats">Last Month Stats (</string>
    <string name="enable_location_services">Please, enable location services</string>
    <string name="current_connection">Current connection:&#160;</string>
    <string name="demo_mode">Running in demo mode</string>
    <string name="date_str">Date</string>
    <string name="avg_str">Avg</string>
    <string name="max_str">High</string>
    <string name="value_str">Value</string>
    <string name="steps_str">Steps</string>
    <string name="calories_str">Calories</string>
    <string name="data_str">Data</string>
    <string name="syncable_str">Syncable</string>
    <string name="enabled_str">Enabled</string>
    <string name="target_time_to_wake_up">Target time to wake up</string>
    <string name="tuesday">Tuesday</string>
    <string name="device_supports_five">Device supports only 5 alarms</string>
    <string name="day_scale">Day Scale</string>
    <string name="week_scale">Week Scale</string>
    <string name="month_scale">Month Scale</string>
    <string name="select_data_scaling_grouping_technique">Select data scaling/grouping technique</string>
    <string name="cancel">CANCEL</string>
    <string name="add_new">Add New</string>
    <string name="info">Info</string>
    <string name="alarms_info_message">MGCOOL BAND 4 supports limited number of reminders. In future we will planning integrate \'smart\' alarms based on your hearth rate</string>
    <string name="choose_period">Choose period</string>
    <string name="min_str">Low</string>
    <string name="current_progress_date">Current progress:</string>
    <string name="sleep_data_analyzer">Sleep data analyzer is running...</string>
    <string name="activity_data_analyzer">Activity data analyzer is running...</string>
    <string name="ignore_light_sleep_phase">Ignore light sleep phase</string>
    <string name="hearth_rate_monitoring">Hearth Rate Monitoring</string>
    <string name="enable_hr_auto_collecting">Enable Auto Collecting</string>
    <string name="collect_every">Collect every X minutes</string>
    <string name="minutes">minutes</string>
    <string name="until">until</string>
    <string name="from">From</string>
    <string name="enable_vibration">Enable vibration</string>
    <string name="idle_reminder">Idle reminder</string>
    <string name="target_steps_count">Target steps count:</string>
    <string name="battery_saver_settings">Battery saver settings</string>
    <string name="enable_battery_saver">Enable battery saver</string>
    <string name="battery_charge_level_threshold">Battery charge level threshold</string>
    <string name="keep_cpu_alive">Keep CPU Alive</string>
    <string name="click_to_disconnect">Click to disconnect</string>
    <string name="device_management">Device management</string>
    <string name="summary_notifications">Will duplicate notifications according to user defined settings.</string>
    <string name="set_up_filter">Set up notification filters</string>
    <string name="summary_filters">Notification from selected apps will be transmitted to device</string>
    <string name="summary_call">Will enable alarm on device when incoming call received</string>
    <string name="summary_idle">Alarm do about poor activity</string>
    <string name="notify_delay">Notification repeat/delay time (seconds)</string>
    <string name="summary_analytics">Send data about app performance and usage activity</string>
    <string name="summary_light_sleep">Application will record light sleep phase, but will not proceed in analytics algos</string>
    <string name="summary_cpualive">WARNING: This function drains battery</string>
    <string name="sync_setting">Sync main data every X minutes</string>
    <string name="summary_reset">Click to send reset command</string>
    <string name="summary_erase">Click to wipe data on smartwatch</string>
    <string name="summart_hrmonitor">Will automatically send request for HR measure</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
</resources>