<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4pt"
        android:text="@string/select_data_scaling_grouping_technique"
        android:textColor="#000000"
        android:textStyle="bold" />


    <RadioGroup
        android:id="@+id/ScaleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/DayScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2pt"
            android:layout_weight="2"
            android:checked="true"
            android:text="@string/day_scale" />

        <RadioButton
            android:id="@+id/WeekScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2pt"
            android:layout_weight="3"
            android:text="@string/week_scale" />

        <RadioButton
            android:id="@+id/MonthScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2pt"
            android:layout_weight="1"
            android:text="@string/month_scale" />
    </RadioGroup>


    <View
        style="@style/horizontalDivider"
        android:layout_height="1pt"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@android:color/white"
            android:text="@string/cancel"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialogConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@android:color/white"
            android:text="@string/confirm_str"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>