<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AddAlarmContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:id="@+id/SundayBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SaturdayBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/sunday" />

        <CheckBox
            android:id="@+id/FridayBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ThursdayBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/WednesdayBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TuesdayBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/wednesday" />

        <CheckBox
            android:id="@+id/ThursdayBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WednesdayBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/thursday" />

        <CheckBox
            android:id="@+id/SaturdayBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FridayBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/saturday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/target_time_to_wake_up"
            app:layout_constraintBottom_toBottomOf="@+id/TargetMinute"
            app:layout_constraintStart_toEndOf="@+id/TargetMinute"
            app:layout_constraintTop_toTopOf="@+id/TargetMinute" />

        <CheckBox
            android:id="@+id/TuesdayBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MondayBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/MondayBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IsEnabledSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/monday" />

        <TextView
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/startMinute"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:text="@string/minimal_possible_wake_up_time" />

        <EditText
            android:visibility="gone"
            android:id="@+id/startHour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hh"
            android:inputType="number" />

        <EditText
            android:id="@+id/TargetHour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startHour"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:editable="false"
            android:focusable="false"
            android:inputType="none"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hh"
            android:onClick="onClickUniversal" />

        <Switch
            android:id="@+id/IsEnabledSwitch"
            android:layout_width="182dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/enabled"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TargetHour" />

        <Switch
            android:id="@+id/IsSyncable"
            android:layout_width="170dp"
            android:layout_height="27dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/sync"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/IsEnabledSwitch"
            app:layout_constraintTop_toBottomOf="@+id/TargetMinute" />

        <EditText
            android:id="@+id/TargetMinute"
            app:layout_constraintStart_toEndOf="@+id/TargetHour"
            app:layout_constraintTop_toBottomOf="@+id/startMinute"
            android:editable="false"
            android:layout_width="55dp"
            android:focusable="false"
            android:inputType="none"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/mm"
            android:onClick="onClickUniversal" />

        <EditText
            android:visibility="gone"
            android:id="@+id/startMinute"
            app:layout_constraintStart_toEndOf="@+id/startHour"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/mm"
            android:inputType="number" />

        <Button
            android:id="@+id/DeleteBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.295"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SundayBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="onClickUniversal"
            android:text="@string/delete"
            android:visibility="invisible" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>